<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_2"
    tools:context=".About_2">

    <TextView
        android:id="@+id/label_dev"
        android:layout_width="368dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginStart="16dp"
        android:contentDescription="ups"
        android:text="@string/mark"
        android:textColor="#CBB5F1"
        android:textSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,MissingPrefix" />

    <TextView
        android:id="@+id/About_dev"
        android:layout_width="338dp"
        android:layout_height="295dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/abDev"
        android:textColor="#7AC87D"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_dev"
        app:layout_constraintVertical_bias="0.898"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <ImageButton
        android:id="@+id/exit_button"
        android:layout_width="102dp"
        android:layout_height="87dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btn_er"
        android:onClick="showMessage"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972"
        app:srcCompat="@drawable/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>